cmake_minimum_required(VERSION 3.10)
project(event LANGUAGES CXX)

if(WIN32)
    file(GLOB SRC_FILES *.cpp *.h ${CMAKE_SOURCE_DIR}/*.rc  ${CMAKE_SOURCE_DIR}/*.xpm)
else()
    file(GLOB SRC_FILES *.cpp *.h ${CMAKE_SOURCE_DIR}/*.xpm)
endif()
if(WIN32)
    add_executable(event WIN32 ${SRC_FILES})
else()
    add_executable(event ${SRC_FILES})
endif()
target_link_libraries(event PRIVATE ${wxWidgets_LIBRARIES})
