cmake_minimum_required(VERSION 3.15)
project(fractal LANGUAGES CXX)

if(WIN32)
  file(GLOB SRC_FILES *.cpp *.h *.rc  ${CMAKE_SOURCE_DIR}/*.xpm)
else()
  file(GLOB SRC_FILES *.cpp *.h ${CMAKE_SOURCE_DIR}/*.xpm)
endif()
if(WIN32)
  add_executable(fractal WIN32 ${SRC_FILES})
else()
  add_executable(fractal ${SRC_FILES})
endif()
target_link_libraries(fractal PRIVATE ${wxWidgets_LIBRARIES})
