cmake_minimum_required(VERSION 3.15)
project(ipc LANGUAGES CXX)

file(GLOB BASEIPCCLIENT_SRC_FILES baseclient.cpp baseclient.h ipcsetup.h ${CMAKE_SOURCE_DIR}/*.xpm)
add_executable(baseipcclient ${BASEIPCCLIENT_SRC_FILES})
target_link_libraries(baseipcclient PRIVATE ${wxWidgets_LIBRARIES})

file(GLOB BASEIPCSERVER_SRC_FILES baseserver.cpp baseserver.h ipcsetup.h ${CMAKE_SOURCE_DIR}/*.xpm)
add_executable(baseipcserver ${BASEIPCSERVER_SRC_FILES})
target_link_libraries(baseipcserver PRIVATE ${wxWidgets_LIBRARIES})

if(WIN32)
  file(GLOB IPCCLIENT_SRC_FILES client.cpp client.h ipcsetup.h ${CMAKE_SOURCE_DIR}/*.rc ${CMAKE_SOURCE_DIR}/*.xpm)
else()
  file(GLOB IPCCLIENT_SRC_FILES client.cpp client.h ipcsetup.h ${CMAKE_SOURCE_DIR}/*.xpm)
endif()
if(WIN32)
  add_executable(ipcclient WIN32 ${IPCCLIENT_SRC_FILES})
else()
  add_executable(ipcclient ${IPCCLIENT_SRC_FILES})
endif()
target_link_libraries(ipcclient PRIVATE ${wxWidgets_LIBRARIES})

if(WIN32)
  file(GLOB IPCSERVER_SRC_FILES server.cpp server.h ipcsetup.h ${CMAKE_SOURCE_DIR}/*.rc ${CMAKE_SOURCE_DIR}/*.xpm)
else()
  file(GLOB IPCSERVER_SRC_FILES server.cpp server.h ipcsetup.h ${CMAKE_SOURCE_DIR}/*.xpm)
endif()
if(WIN32)
  add_executable(ipcserver WIN32 ${IPCSERVER_SRC_FILES})
else()
  add_executable(ipcserver ${IPCSERVER_SRC_FILES})
endif()
target_link_libraries(ipcserver PRIVATE ${wxWidgets_LIBRARIES})
