cmake_minimum_required(VERSION 3.15)
project(layout LANGUAGES CXX)

if(WIN32)
  file(GLOB SRC_FILES layout.cpp layout.h ${CMAKE_SOURCE_DIR}/*.rc  ${CMAKE_SOURCE_DIR}/*.xpm)
else()
  file(GLOB SRC_FILES layout.cpp layout.h ${CMAKE_SOURCE_DIR}/*.xpm)
endif()
if(WIN32)
  add_executable(layout WIN32 ${SRC_FILES})
else()
  add_executable(layout ${SRC_FILES})
endif()
target_link_libraries(layout PRIVATE ${wxWidgets_LIBRARIES})
