cmake_minimum_required(VERSION 3.10)
project(listtest LANGUAGES CXX)

if(WIN32)
  file(GLOB SRC_FILES *.cpp *.h *.rc ${CMAKE_SOURCE_DIR}/*.xpm)
else()
  file(GLOB SRC_FILES *.cpp *.h ${CMAKE_SOURCE_DIR}/*.xpm)
endif()
if(WIN32)
  add_executable(listtest WIN32 ${SRC_FILES})
else()
  add_executable(listtest ${SRC_FILES})
endif()
target_link_libraries(listtest PRIVATE ${wxWidgets_LIBRARIES})
